--- a/style.css
+++ b/style.css
@@ -9,18 +9,16 @@ body {
 
 .gambar-kecil {
     width: 100%;
-    height: auto;
+    max-width: 1000px;
     border-radius: 10%;
     -webkit-border-radius: 10%;
     -moz-border-radius: 10%;
     -ms-border-radius: 10%;
     -o-border-radius: 10%;
-    height: auto;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     margin-top: 1%;
     margin-bottom: 1%;
 }
-
 p {
     margin: 20px 0;
     line-height: 1.8em;
