--- a/style.css
+++ b/style.css
@@ -8,17 +8,19 @@ body {
 }
 
 .gambar-kecil {
-    width: 100%;
-    max-width: 1000px;
+    width: 70%;
+    height: auto;
     border-radius: 10%;
     -webkit-border-radius: 10%;
     -moz-border-radius: 10%;
     -ms-border-radius: 10%;
     -o-border-radius: 10%;
+    height: auto;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     margin-top: 1%;
     margin-bottom: 1%;
 }
+
 p {
     margin: 20px 0;
     line-height: 1.8em;
@@ -52,8 +54,8 @@ div {
 
 
 .navbar-horizontal .nav-links {
-    list-style: none;
     display: flex;
+    justify-content: center;
     gap: 24px;
     margin: 0;
     padding: 0;
@@ -67,7 +69,7 @@ div {
 }
 
 .navbar-horizontal .nav-links li a:hover {
-    color: #ff0000;
+    color: #ffffff;
 }
 
 .responsif-teks {
